Mirror clipping is not properly placed in sculpt mode #94564

Closed
opened 2022-01-02 08:19:10 +07:00 by Nahuel Belich · 9 comments

System Information
Operating system: Linux-5.11.0-43-generic-x86_64-with-glibc2.31 64 Bits
Graphics card: NVIDIA GeForce GTX 1070/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 470.82.01

Blender Version
Broken: version: 3.1.0 Alpha, branch: master, commit date: 2021-12-28 08:36, hash: e28222966b
Worked: (newest version of Blender that worked as expected)

Short description of error
The origin of the object its on the red line, however im using an empty as mirror object to offset the mirror center,thats the green line.
in edit mode this works fine but in sculpt mode using the grab brush it doesn't really know where the clipping plane should be so it produces those artifacs on the red line.
image.png
image.png

Exact steps for others to reproduce the error

mirror clipping sculpt.blend
Use sculpt brush grab and drag left to right in the blue circle, do this with clipping disable and enable in the mirror modifier

**System Information** Operating system: Linux-5.11.0-43-generic-x86_64-with-glibc2.31 64 Bits Graphics card: NVIDIA GeForce GTX 1070/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 470.82.01 **Blender Version** Broken: version: 3.1.0 Alpha, branch: master, commit date: 2021-12-28 08:36, hash: `e28222966b` Worked: (newest version of Blender that worked as expected) **Short description of error** The origin of the object its on the red line, however im using an empty as mirror object to offset the mirror center,thats the green line. in edit mode this works fine but in sculpt mode using the grab brush it doesn't really know where the clipping plane should be so it produces those artifacs on the red line. ![image.png](https://archive.blender.org/developer/F12784996/image.png) ![image.png](https://archive.blender.org/developer/F12784998/image.png) **Exact steps for others to reproduce the error** [mirror clipping sculpt.blend](https://archive.blender.org/developer/F12785001/mirror_clipping_sculpt.blend) Use sculpt brush grab and drag left to right in the blue circle, do this with clipping disable and enable in the mirror modifier

Added subscriber: @NahuelBelich

Added subscriber: @NahuelBelich

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'

Can confirm, it is not taking the mirror_ob into account in sculpt mode.
Would be worth to check edbm_do_smooth_vertex_execas well [which also does not seem to take this into account]

Can confirm, it is not taking the `mirror_ob` into account in sculpt mode. Would be worth to check `edbm_do_smooth_vertex_exec`as well [which also does not seem to take this into account]
Philipp Oeser self-assigned this 2022-01-03 10:31:43 +07:00

Will check

Will check

This issue was referenced by b61a912128

This issue was referenced by b61a9121282937b6d56f00a63fb6c6d78a7ddd86

This issue was referenced by 3a79c1d8f5

This issue was referenced by 3a79c1d8f5987375df0aaa796d684f54b0791ea7

This issue was referenced by 13e7065dd2

This issue was referenced by 13e7065dd2177aae99fc113f47a8b8debbda551c

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
Eevee & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest/Import
Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest: Wayland
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
Eevee & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#94564
There is no content yet.